--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
+    "react-spinners": "^0.13.8",
     "sweetalert2": "^11.9.0",
     "yup": "^1.3.2"
   },
